feat: Ajuste de doc para swagger. [controllers, dtos]
